# 2024Rover

./: firstTimeInstall.sh
src/arm_interface/: package.xml  setup.py
src/arm_interface/arm_interface/: joystickArmController.py  keyboardArmController.py  keyboardArmPublisher.py  trajectoryInterpreter.py
src/arm_interface/launch/: armjoystick.launch.py  keyboard.launch.py
src/arm_interface_inverse_kin/: CMakeLists.txt  package.xml
src/arm_interface_inverse_kin/launch/: joystick_inverse_kin_launch.launch.py
src/arm_interface_inverse_kin/src/: joystickKinArmController.cpp  joystickKinArmController.h
src/camera_streaming/: CMakeLists.txt  camera_streaming
src/camera_streaming/config/: webrtc.yaml
src/camera_streaming/include/camera_streaming/: webrtc_node.h
src/camera_streaming/src/: webrtc_node.cpp
src/drill_interface/: package.xml  setup.cfg  setup.py
src/drill_interface/drill_interface/: joystickDrillController.py
src/drill_interface/launch/: drillWithJoystick.launch.py  drilljoystick.launch.py
src/drive/launch/: talonDrive.launch.py
src/drive_cpp/src/: TalonDriveController.cpp
src/gpio_controller/: package.xml  setup.py
src/gpio_controller/gpio_controller/: gpioManager.py
src/hardware/src/: rover_arm.cpp  rover_arm.h
src/interfaces/: CMakeLists.txt
src/keyboard_publisher/src/: keyboard_publisher.cpp  keyboard_publisher.h
src/moveit_controller/src/: moveit_controller.cpp
src/navigation/params/: nav2.yaml
src/ros_phoenix_humble/: CMakeLists.txt
src/rover_srdf/launch/: test.launch.py
src/science_sensors/: setup.py
src/servo_pkg/launch/: i2c_servo_launch.launch.py
src/test_urdf_v3/: CMakeLists.txt  package.xml
src/test_urdf_v3/config/: ArmURDF2.ros2_control.xacro
src/test_urdf_v3/launch/: demo.launch.py
src/tf_keyboard/: package.xml  setup.py
src/typing_controller/src/: typing_controller.cpp  typing_controller.h
src/typing_publisher/src/: typing_publisher.cpp  typing_publisher.h
(+3 files in other folders)
